# expect

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  matcher.rs  options.rs
