[package]
name = "expect"
version = "0.1.0"
edition = "2021"

description = "Suppress expected output from stdin."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "color", "suggestions"] }
anyhow = "1"
derive-getters = "0.3"
log = "0.4.20"
regex = "1"
